user-apps/miscellaneous/karakeep/karakeep-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karakeep-web
  labels:
    app: karakeep
    tier: web
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: karakeep
      tier: web
  template:
    metadata:
      labels:
        app: karakeep
        tier: web
        netpol.cilium.io/egress-to-intra: "true"
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/egress-to-public-ips: "true"
        netpol.cilium.io/ingress-from-intra: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      priorityClassName: application-critical
      containers:
        - name: karakeep
          image: ghcr.io/karakeep-app/karakeep:0.33.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - mountPath: /data
              name: karakeep-data
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: karakeep-data
          persistentVolumeClaim:
            claimName: karakeep-pvc
