user-apps/miscellaneous/karakeep/karakeep-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-web
spec:
  selector:
    app: karakeep
    tier: web
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  type: ClusterIP
