user-apps/miscellaneous/karakeep/karakeep-web/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Miscellaneous
    gethomepage.dev/name: Karakeep
    gethomepage.dev/icon: https://raw.githubusercontent.com/karakeep-app/karakeep/refs/heads/main/apps/landing/public/favicon.ico
    gethomepage.dev/href: https://bookmarks.tamhomelab.com
    gethomepage.dev/description: Bookmark Manager
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "bookmarks.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: karakeep-web
          port: 3000
          weight: 1
